--- a/styles/style.css
+++ b/styles/style.css
@@ -27,3 +27,36 @@ body {
     background: linear-gradient(90deg, rgba(105,246,30,1) 0%, rgba(29,175,253,1) 50%, rgba(73,66,255,1) 100%);
     color: white;
 }
+
+/* Gallery */
+
+
+/* Project */
+
+.projects-container {
+    margin: 3% 10%;
+}
+
+.card {
+    text-align: center;
+    margin: 0 0%;
+    height: 100%;
+}
+
+.lokal-img {
+    margin: 0 20%;
+    width: 60%;
+}
+
+.lokal {
+    background-color: rgba(205, 255, 119, 0.887);
+}
+
+.odad-img {
+    margin: 18% 0;
+}
+
+.odad {
+    background-color: rgb(52, 56, 63);
+    color: white;
+}
