add bottom padding to cards
Former-commit-id: f78716bfb7c1bd436a6b3e48676ea9062086914d

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,8 +39,11 @@ body {
 
 .card {
     text-align: center;
-    margin: 0 0%;
     height: 100%;
+}
+
+.card-div {
+    margin-bottom: 20px;
 }
 
 .lokal-img {
