--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,26 @@
+@font-face {
+    font-family: 'Akshat Sans';
+    src: url('/fonts/AkshatSans-Regular.eot');
+    src: url('/fonts/AkshatSans-Regular.eot?#iefix') format('embedded-opentype'),
+        url('/fonts/AkshatSans-Regular.woff2') format('woff2'),
+        url('/fonts/AkshatSans-Regular.woff') format('woff'),
+        url('/fonts/AkshatSans-Regular.ttf') format('truetype'),
+        url('/fonts/AkshatSans-Regular.svg#AkshatSans-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
 body {
     background-color: black;
 }
 
 #name {
-    font-size: 100px;
+    font-family: 'Akshat Sans';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 150px;
     background: linear-gradient(90deg, rgba(105,246,30,1) 0%, rgba(29,175,253,1) 50%, rgba(73,66,255,1) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -12,6 +29,11 @@ body {
 
 .navbar {
     background: linear-gradient(90deg, rgba(105,246,30,1) 0%, rgba(29,175,253,1) 50%, rgba(73,66,255,1) 100%);
+}
+
+.navbar-brand {
+    font-family: 'Akshat Sans';
+    font-size: 30px;
 }
 
 .center {
