--- a/styles/style.css
+++ b/styles/style.css
@@ -21,14 +21,14 @@ body {
     font-weight: normal;
     font-style: normal;
     font-size: 150px;
-    background: linear-gradient(90deg, rgba(105,246,30,1) 0%, rgba(29,175,253,1) 50%, rgba(73,66,255,1) 100%);
+    background: linear-gradient(90deg, rgba(105, 246, 30, 1) 0%, rgba(29, 175, 253, 1) 50%, rgba(73, 66, 255, 1) 100%);
     -webkit-background-clip: text;
     background-clip: text;
-    -webkit-text-fill-color: transparent;   
+    -webkit-text-fill-color: transparent;
 }
 
 .navbar {
-    background: linear-gradient(90deg, rgba(105,246,30,1) 0%, rgba(29,175,253,1) 50%, rgba(73,66,255,1) 100%);
+    background: linear-gradient(90deg, rgba(105, 246, 30, 1) 0%, rgba(29, 175, 253, 1) 50%, rgba(73, 66, 255, 1) 100%);
 }
 
 .navbar-brand {
@@ -46,7 +46,7 @@ body {
 }
 
 .main-btn:hover {
-    background: linear-gradient(90deg, rgba(105,246,30,1) 0%, rgba(29,175,253,1) 50%, rgba(73,66,255,1) 100%);
+    background: linear-gradient(90deg, rgba(105, 246, 30, 1) 0%, rgba(29, 175, 253, 1) 50%, rgba(73, 66, 255, 1) 100%);
     color: white;
 }
 
