--- a/styles/style.css
+++ b/styles/style.css
@@ -11,9 +11,16 @@
     font-display: swap;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
 
 body {
     background-color: black;
+    font-family: "Oxygen", sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Ubuntu", sans-serif;
 }
 
 #name {
@@ -21,14 +28,14 @@ body {
     font-weight: normal;
     font-style: normal;
     font-size: 150px;
-    background: linear-gradient(90deg, rgba(105, 246, 30, 1) 0%, rgba(29, 175, 253, 1) 50%, rgba(73, 66, 255, 1) 100%);
+    background: linear-gradient(90deg, rgba(73, 66, 255, 1) 0%, rgba(29, 175, 253, 1) 50%, rgba(105, 246, 30, 1) 100%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
 .navbar {
-    background: linear-gradient(90deg, rgba(105, 246, 30, 1) 0%, rgba(29, 175, 253, 1) 50%, rgba(73, 66, 255, 1) 100%);
+    background: linear-gradient(90deg, rgba(73, 66, 255, 1) 0%, rgba(29, 175, 253, 1) 50%, rgba(105, 246, 30, 1) 100%);
 }
 
 .navbar-brand {
@@ -46,7 +53,7 @@ body {
 }
 
 .main-btn:hover {
-    background: linear-gradient(90deg, rgba(105, 246, 30, 1) 0%, rgba(29, 175, 253, 1) 50%, rgba(73, 66, 255, 1) 100%);
+    background: linear-gradient(90deg, rgba(73, 66, 255, 1) 0%, rgba(29, 175, 253, 1) 50%, rgba(105, 246, 30, 1) 100%);
     color: white;
 }
 
